--- a/css/flex-box/flex-box.css
+++ b/css/flex-box/flex-box.css
@@ -4,6 +4,8 @@
   font-family: sans-serif;
 }
 
+/* navbar stylings */
+
 nav,
 nav * {
   display: flex;
@@ -16,9 +18,9 @@ nav {
   justify-content: space-between;
   width: 100%;
   height: 50px;
+  font-size: 1.25em;
   background-color: black;
   color: white;
-  font-size: 1.25em;
 }
 
 #logo {
@@ -34,10 +36,10 @@ nav {
 }
 
 a {
-  text-decoration: none;
-  color: white;
   width: 33%;
   height: 100%;
+  text-decoration: none;
+  color: white;
 }
 
 a:hover {
@@ -53,7 +55,6 @@ main {
   margin: 25px auto;
   display: flex;
   justify-content: space-between;
-  /* border: solid 2px red; */
 }
 
 #left-panel {
