Created responsiveness (needs editing)

--- a/advanced-web/forms/forms.css
+++ b/advanced-web/forms/forms.css
@@ -4,26 +4,63 @@
   font-family: sans-serif;
 }
 
-main {
-  min-width: 100vw;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /* border: solid 2px red; */
+body {
+  background-image: url("./background.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  /* padding: 40px; */
+}
+
+h1 {
+  width: 75%;
+  margin: 30px auto;
+  text-align: center;
+  background-color: white;
+  padding: 10px;
+  border: solid 2px grey;
+  border-radius: 4px;
 }
 
 form {
+  height: 100%;
+  width: 75%;
+  margin: 0 auto;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: solid 2px grey;
+  background-color: white;
+  border-radius: 4px;
+}
+
+#form-fields {
   margin: 10px auto;
-  border: solid 2px black;
-  min-height: 50%;
-  min-width: 30%;
+  min-height: 100%;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  /* border: dotted 2px black; */
 }
 
 fieldset {
-  border: none;
-  width: 100%;
-  /* border: 2px solid red; */
+  /* border: none; */
+  /* display: inline; */
+  width: 25%;
+  min-width: 200px;
+  margin: 10px;
+  height: 300px;
+  border: 2px solid grey;
+  border-radius: 4px;
+  background-color: #9ee606;
+  padding: 10px;
 }
 
 .block {
@@ -31,6 +68,7 @@ fieldset {
   display: block;
   width: 90%;
   padding: 5px;
+  border-radius: 4px;
 }
 
 .click-input {
@@ -39,8 +77,9 @@ fieldset {
 
 .label {
   display: block;
-  padding-left: 5%;
-  margin: 5px 0;
+  padding-left: 2%;
+  margin: 10px 0 5px 0;
+  font-weight: bold;
 }
 
 #last-check {
@@ -48,8 +87,24 @@ fieldset {
 }
 
 #submit {
+  display: block;
   margin-bottom: 10px;
   padding: 0.5em;
   width: 75px;
   margin: 10px auto;
+  font-weight: bold;
+  border: solid grey;
+  border-radius: 4px;
+  background-color: #9ee606;
+}
+
+#submit:hover {
+  cursor: pointer;
+  background-color: white;
+}
+
+@media only screen and (min-width: 750px) {
+  fieldset {
+    max-width: 30%;
+  }
 }
