--- a/advanced-web/accessibility/accessibility.css
+++ b/advanced-web/accessibility/accessibility.css
@@ -11,7 +11,7 @@ header {
 nav {
   min-width: 100%;
   height: 100%;
-  background-color: purple;
+  background-color: #0094e4;
   display: flex;
   justify-content: space-between;
 }
@@ -19,14 +19,14 @@ nav {
 #logo {
   max-height: 100%;
   width: 20%;
-  border: solid 2px purple;
+  border: solid 5px #0094e4;
   background-color: white;
 }
 
 h1 {
   font-size: 2em;
   height: 100%;
-  color: purple;
+  color: #0094e4;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -62,7 +62,7 @@ h1 {
 #icons i:hover {
   cursor: pointer;
   background-color: white;
-  color: purple;
+  color: #0094e4;
 }
 
 main {
@@ -74,7 +74,7 @@ main {
 form {
   width: 500px;
   margin: 20px auto;
-  background-color: purple;
+  background-color: #0094e4;
   text-align: center;
 }
 
