--- a/advanced-web/scss/solution/extension.css
+++ b/advanced-web/scss/solution/extension.css
@@ -26,7 +26,7 @@ main {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  background-image: url("./background-2.jpg");
+  background-image: url("../assets/background-2.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
