--- a/advanced-web/scss/solution/extension.scss
+++ b/advanced-web/scss/solution/extension.scss
@@ -50,7 +50,7 @@ main {
   height: 90vh;
   width: 100vw;
   @include flex-row;
-  background-image: url("./background-2.jpg");
+  background-image: url("../assets/background-2.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
