--- a/advanced-web/scss/solution/main.css
+++ b/advanced-web/scss/solution/main.css
@@ -23,7 +23,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url("./background-2.jpg");
+  background-image: url("../assets/background-2.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
